--- a/starter-kit/server-app/.env
+++ b/starter-kit/server-app/.env
@@ -1,5 +1,8 @@
 # Environment variables
 
-STARTER_KIT_SERVER_URL=https://community-ph.mybluemix.net/
+ASSISTANT_URL=https://api.us-south.assistant.watson.cloud.ibm.com
+ASSISTANT_ID=610186d7-75a3-4067-a246-4f30f4115d6a
+ASSISTANT_IAM_APIKEY=kidyYKUd4LDXAMIx7K6-kPfuqxK7G_5VvVzryH3YVInr
 
-HERE_APIKEY=lHV1uz95x2be8ydB-5mn2PUSO30WJIxJvX8p7-ugK6o
+CLOUDANT_ID=ffe37ec0-9b88-46e4-8ce8-9a21b205411e-bluemix
+CLOUDANT_IAM_APIKEY=F3mpcxvgrrXNjM-WnNas_P6QoRvTAe_7FinlZ17X-avR
